refact: to so it holds the business logic initially in the controller